--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -3,7 +3,7 @@
   <section class="flex flex-col gap-4 items-center py-4">
     <% timelogs.forEach(function (tl) { %>
 
-      <article class="flex flex-col-reverse justify-between gap-5 border-4 px-4 py-10 rounded-3xl w-3/4 max-sm:w-full ">
+      <article class="flex flex-col justify-between gap-5 border-4 px-4 py-10 rounded-3xl w-3/4 max-sm:w-full ">
         <div>
           <div class="flex gap-3 items-center max-sm:flex-col max-sm:items-start max-sm:gap-1  ">
             <a href="/users/<%= tl.user._id %>">
