--- a/public/stylesheets/tailwind.css
+++ b/public/stylesheets/tailwind.css
@@ -872,6 +872,10 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
