--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/navigationBar %>
 <main class="h-screen w-full p-8 relative">
-  <section class="flex flex-col gap-4 items-center py-4">
+  <section class="flex flex-col-reverse gap-4 items-center py-4">
     <% timelogs.forEach(function (tl) { %>
 
       <article class="flex flex-col justify-between gap-5 border-4 px-4 py-10 rounded-3xl w-3/4 max-sm:w-full ">
